--- a/2-Lab/.gitignore
+++ b/2-Lab/.gitignore
@@ -1,6 +1,7 @@
 /itmo-comp-arch22-lab2-Ismaxis
 /iverilog
 /HelloWorld
-dump_cache_old.vcd
-dump_cache_optimized_write_MM.vcd
+/out
+
+*.vcd
 *.dump
