elf header and programm header parsed

--- a/3-Lab/.vscode/settings.json
+++ b/3-Lab/.vscode/settings.json
@@ -51,6 +51,18 @@
         "xmemory": "cpp",
         "xstring": "cpp",
         "cstring": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "ios": "cpp",
+        "xfacet": "cpp",
+        "xhash": "cpp",
+        "xiosbase": "cpp",
+        "xlocale": "cpp",
+        "xlocinfo": "cpp",
+        "xlocmon": "cpp",
+        "xlocnum": "cpp",
+        "xloctime": "cpp",
+        "xstddef": "cpp",
+        "xtr1common": "cpp",
+        "xutility": "cpp"
     }
 }
