--- a/3-Lab/Structs/CMakeLists.txt
+++ b/3-Lab/Structs/CMakeLists.txt
@@ -5,6 +5,8 @@ set(h
     "${CMAKE_CURRENT_SOURCE_DIR}/AbstractStruct.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/ElfHeader.h"
     "${CMAKE_CURRENT_SOURCE_DIR}/ProgrammHeader.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/SectionHeader.h"
+    "${CMAKE_CURRENT_SOURCE_DIR}/SymTabEntry.h"
 )
 
 
