--- a/3-Lab/Types/CMakeLists.txt
+++ b/3-Lab/Types/CMakeLists.txt
@@ -1,17 +1,13 @@
 cmake_minimum_required (VERSION 3.8)
 project("RiscV-Disassembler")
  
-set(h 
-    "${CMAKE_CURRENT_SOURCE_DIR}/BType.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/IAddrType.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/BType.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/IType.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/JType.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/RType.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/SType.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/UType.h"
+file(GLOB h
+    "${CMAKE_CURRENT_SOURCE_DIR}/*Type.h"
+)
+file(GLOB cpp
+    "${CMAKE_CURRENT_SOURCE_DIR}/*Type.cpp"
 )
 
 
-target_sources(RiscV-Disassembler PRIVATE ${h})
+target_sources(RiscV-Disassembler PRIVATE ${h} ${cpp})
 target_include_directories(RiscV-Disassembler PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
