unknown type added

--- a/3-Lab/CMakeLists.txt
+++ b/3-Lab/CMakeLists.txt
@@ -2,13 +2,14 @@
 
 project ("RiscV-Disassembler")
 
-add_executable (RiscV-Disassembler 
-	main.cpp
-	Instruction.h Instruction.cpp
-	Storage.h Storage.cpp
-	Type.h
-	ElfParser.h ElfParser.cpp
+file (GLOB h
+	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
 )
+file (GLOB cpp
+	"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
+)
+
+add_executable (RiscV-Disassembler ${h} ${cpp})
 
 add_subdirectory(Types)
 add_subdirectory(Structs)
