--- a/3-Lab/Structs/CMakeLists.txt
+++ b/3-Lab/Structs/CMakeLists.txt
@@ -1,12 +1,8 @@
 cmake_minimum_required (VERSION 3.8)
 project("RiscV-Disassembler")
- 
-set(h 
-    "${CMAKE_CURRENT_SOURCE_DIR}/AbstractStruct.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/ElfHeader.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/ProgrammHeader.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/SectionHeader.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/SymTabEntry.h"
+
+file (GLOB h
+    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
 )
 
 
