--- a/3-Lab/.vscode/settings.json
+++ b/3-Lab/.vscode/settings.json
@@ -64,5 +64,8 @@
         "xstddef": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp"
-    }
+    },
+    "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
+        "clang-diagnostic-error"
+    ]
 }
