arguments input added

--- a/3-Lab/CMakeLists.txt
+++ b/3-Lab/CMakeLists.txt
@@ -2,6 +2,8 @@
 
 project ("RiscV-Disassembler")
 
+set(executableName "rv3")
+
 file (GLOB h
 	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
 )
@@ -9,7 +11,7 @@ file (GLOB cpp
 	"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
 )
 
-add_executable (RiscV-Disassembler ${h} ${cpp})
+add_executable (${executableName} ${h} ${cpp})
 
 add_subdirectory(Types)
 add_subdirectory(Structs)
