--- a/3-Lab/.vscode/tasks.json
+++ b/3-Lab/.vscode/tasks.json
@@ -9,7 +9,7 @@
                 "-g",
                 "${file}",
                 "-o",
-                "${fileDirname}\\out\\${fileBasenameNoExtension}.exe",
+                "${fileDirname}\\build\\${fileBasenameNoExtension}.exe",
                 "-I", 
                 "${fileDirname}\\Types",
                 "-I", 
