ss write addded

--- a/3-Lab/.vscode/settings.json
+++ b/3-Lab/.vscode/settings.json
@@ -66,6 +66,7 @@
         "xutility": "cpp"
     },
     "C_Cpp.codeAnalysis.clangTidy.checks.disabled": [
-        "clang-diagnostic-error"
-    ]
+        "clang-analyzer-*"
+    ],
+    "cmake.generator": "Sublime Text 2 - MinGW Makefiles"
 }
