--- a/3-Lab/.vscode/settings.json
+++ b/3-Lab/.vscode/settings.json
@@ -2,7 +2,7 @@
     "cmake.debugConfig": {
         "args": [
             ".\\resources\\out.elf",
-            ".\\resources\\out.validate"
+            ".\\resources\\out.s"
         ]
     },
     "files.associations": {
