--- a/3-Lab/.vscode/settings.json
+++ b/3-Lab/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "cmake.debugConfig": {
         "args": [
-            ".\\resources\\out.elf",
+            // ".\\resources\\out.elf",
+            "C:\\Users\\Ismaxis\\Downloads\\test.elf",
             ".\\resources\\out.s"
         ]
     },
