--- a/4-Lab/4-Lab.vcxproj.filters
+++ b/4-Lab/4-Lab.vcxproj.filters
@@ -21,10 +21,19 @@
     <ClCompile Include="PnmImage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="test.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="otsuFuncs.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PnmImage.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="otsuFuncs.h">
+      <Filter>Source Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
