--- a/4-Lab/4-Lab.vcxproj.filters
+++ b/4-Lab/4-Lab.vcxproj.filters
@@ -21,11 +21,11 @@
     <ClCompile Include="PnmImage.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="test.h">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="otsuFuncs.cpp">
       <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="test.h">
+      <Filter>Header Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -33,7 +33,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="otsuFuncs.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
