--- a/4-Lab/4-Lab.vcxproj
+++ b/4-Lab/4-Lab.vcxproj
@@ -105,6 +105,7 @@
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <OpenMPSupport>true</OpenMPSupport>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -147,7 +148,6 @@
   <ItemGroup>
     <ClCompile Include="hard.cpp" />
     <ClCompile Include="otsuFuncs.cpp" />
-    <ClCompile Include="test.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="otsuFuncs.h" />
